Fix navigation link to external site

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,8 @@
         <li><a href="{{ nav.url | prepend: site.baseurl }}" title="{{ nav.title }}">{{ nav.title }}</a></li>
       {% endfor %}
 
+        <li><a href="{{ site.website }}" title="About">About</a></li>
+
     </ul>
 
   </nav>
