Fix link to view all posts for post layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,5 +16,5 @@ layout: default
 </article>
 
 <aside>
-  <p class="post-all"><a href="/">View all posts</a> &#10095;&#10095;</p>
+  <p class="post-all"><a href="{{ "/" | prepend: site.baseurl }}">View all posts</a> &#10095;&#10095;</p>
 </aside>
