--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -17,7 +17,7 @@ $background-color: #fafafa;
 $grey-dark-color:  #2c2c2c;
 $grey-med-color:   #424242;
 $grey-light-color: #848484;
-$highlight-color:  #dedede;
+$border-color:     #dedede;
 $brand-color:      #c41f3b;
 
 // @include transition(all .25s ease-in-out);
