--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,17 +4,13 @@ layout: default
 
 <article class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title  }}</h1>
-    <p class="post-meta">{{ page.date | date: "%B %-d, %Y" }}</p>
-  </header>
-
-  <div class="post-content">
-    {{ content }}
-  </div>
+  {{ content }}
 
 </article>
 
 <aside>
-  <p class="post-all"><a href="{{ "/" | prepend: site.baseurl }}">View all posts</a> &#10095;&#10095;</p>
+  
+  <p class="post-meta">Published on {{ page.date | date: "%B %-d, %Y" }}.</p>
+  <p class="post-all"><a href="{{ "/" | relative_url }}">View all posts &#10095;&#10095;</a></p>
+
 </aside>
