Fix footer font color

--- a/assets/style.css
+++ b/assets/style.css
@@ -59,7 +59,7 @@ form {
   --color-selection-font: #fff;
 
   --color-footer-background: #3a3a3a;
-  --color-footer-font: #3a3a3a;
+  --color-footer-font: #9ca1b4;
 }
 
 .theme-dark {
