--- a/assets/style.css
+++ b/assets/style.css
@@ -88,9 +88,8 @@ form {
 html { height: 100%; }  /* For pushing footer to bottom of page */
 
 body {
-  display: flex;          /* For pushing footer to bottom of page */
-  flex-direction: column; /* For pushing footer to bottom of page */
-  height: 100%;           /* For pushing footer to bottom of page */
+  width: 100%;
+  height: 100%;
   font-family: 'Lato', sans-serif;
   font-size: 18px; 
   font-weight: 400; 
@@ -268,8 +267,10 @@ th {
 ------------------------------------------------------------------------------*/
 
 .wrapper { 
-  display: block; /* For pushing footer to bottom of page */
-  flex: 1 0 auto; /* For pushing footer to bottom of page */
+  display: flex;
+  min-height: 100%;
+  flex-direction: column;
+  align-items: stretch;
   margin-right: auto;
   margin-left: auto;
   padding-right: calc(var(--spacing-unit) / 2);
@@ -280,7 +281,10 @@ th {
 /* -- HEADER
 ------------------------------------------------------------------------------*/
 
-.site-header { margin-top: var(--spacing-unit); }
+.site-header { 
+  flex-shrink: 0;
+  margin-top: var(--spacing-unit); 
+}
 
 .site-title {
   font-size: 2em; 
@@ -294,7 +298,10 @@ th {
 /* -- NAV
 ------------------------------------------------------------------------------*/
 
-.site-nav { margin-top: calc(var(--spacing-unit) / 2); }
+.site-nav { 
+  flex-shrink: 0;
+  margin-top: calc(var(--spacing-unit) / 2); 
+}
 
 .site-nav ul {
   margin: 0; 
@@ -318,6 +325,7 @@ th {
 ------------------------------------------------------------------------------*/
 
 .content {
+  flex-grow: 1;
   margin-top: calc(var(--spacing-unit) * 2);
   margin-bottom: calc(var(--spacing-unit) * 2);
 }
@@ -360,7 +368,7 @@ th {
 ------------------------------------------------------------------------------*/
 
 .site-footer {
-  flex-shrink: 0; /* For pushing footer to bottom of page */
+  flex-shrink: 0;
   padding-top: var(--spacing-unit);
   padding-bottom: var(--spacing-unit);
   font-size: .889em;
