--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
 
   <link rel="icon" href="{{ "/assets/favicon.ico" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/style.css" | relative_url }}">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | relative_url }}">
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html',''}}">
 
