--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,6 @@
   <link rel="stylesheet" href="{{ "/assets/style.css" | relative_url }}">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | relative_url }}">
-  <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html',''}}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
 
 </head>
