--- a/assets/style.css
+++ b/assets/style.css
@@ -167,6 +167,11 @@ ul ul {
   margin-top: calc(var(--spacing-unit) / 8);
   margin-bottom: calc(var(--spacing-unit) / 8);
 }
+ul ol {
+  margin-top: calc(var(--spacing-unit) / 8);
+  margin-bottom: calc(var(--spacing-unit) / 8);
+  padding-left: var(--spacing-unit);
+}
 
 /* -- BLOCKQUOTE
 ------------------------------------------------------------------------------*/
