--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,5 @@
 <footer class="site-footer">
 
-  <ul>
-
-    <li>Copyright &#169; 2013&#8211;{{ site.time | date: '%Y' }} <a href="{{ site.author.website }}" title="{{ site.author.name }}">{{ site.author.name }}</a>.</li>
-    <li><a href="{{ "/feed.xml" | relative_url }}" type="application/rss+xml" title="RSS">RSS</a></li>
-
-  </ul>
+  Copyright &#169; 2013&#8211;{{ site.time | date: '%Y' }} <a href="{{ site.author.website }}" title="{{ site.author.name }}">{{ site.author.name }}</a>
   
 </footer>
