--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="theme-light">
+<html lang="en">
   
   {% include head.html %}
 
@@ -20,15 +20,6 @@
       {% include footer.html %}
 
     </div>
-
-    <div class="theme-switch-wrapper">
-      <label id="theme-switch" class="theme-switch">
-        <input type="checkbox" onchange="toggleTheme()" id="theme-slider">
-        <span class="theme-slider round"></span>
-      </label>
-    </div>
-
-    <script src="{{ "/assets/theme.js" | relative_url }}"></script>
 
   </body>
 
