--- a/assets/style.css
+++ b/assets/style.css
@@ -63,11 +63,11 @@ html { height: 100%; }  /* For pushing footer to bottom of page */
 body {
   width: 100%;
   height: 100%;
-  background-color: var(--color-primary-background);
   font-family: sans-serif;
   font-size: 18px;
   line-height: 1.6;
   color: var(--color-primary-font);
+  background-color: var(--color-primary-background);
 }
 
 /* -- HEADINGS
@@ -102,13 +102,11 @@ strong { font-weight: bold; }
 em { font-style: italic; }
 
 a {
-  border-bottom: 2px solid var(--color-border);
   color: var(--color-accent-dark);
   text-decoration: none;
+  border-bottom: 2px solid var(--color-border);
 }
-a:hover {
-  border-bottom: 2px solid var(--color-accent-light);
-}
+a:hover { border-bottom: 2px solid var(--color-accent-light); }
 
 
 /* -- LISTS
@@ -139,7 +137,7 @@ ul ol {
 
 pre,
 code {
-  font-family: "Courier New", Courier, monospace;
+  font-family: 'Courier New', Courier, monospace;
   font-size: 14px;
   color: var(--color-emphasize-font);
   background-color: var(--color-secondary-background);
@@ -193,7 +191,19 @@ table {
 tr { border-bottom: 1px solid var(--color-border); }
 tr:last-child { border-bottom: none; }
 
-th,
+th {
+  padding-left: calc(var(--spacing-unit) / 4);
+  padding-top: calc(var(--spacing-unit) / 8);
+  padding-right: calc(var(--spacing-unit) / 2);
+  padding-bottom: calc(var(--spacing-unit) / 8);
+  font-size: .75em;
+  font-weight: bold;
+  text-align: left;
+  border-bottom: 1px solid var(--color-border);
+  background-color: var(--color-secondary-background);
+}
+th:last-child { padding-right: calc(var(--spacing-unit) / 4); }
+
 td {
   padding-left: calc(var(--spacing-unit) / 4);
   padding-top: calc(var(--spacing-unit) / 8);
@@ -202,14 +212,8 @@ td {
   font-size: .75em;
   text-align: left;
 }
-th:last-child,
 td:last-child { padding-right: calc(var(--spacing-unit) / 4); }
 
-th {
-  font-weight: bold;
-  border-bottom: 1px solid var(--color-border);
-  background-color: var(--color-secondary-background);
-}
 
 /*------------------------------------------------------------------------------
 -- // LAYOUT
@@ -217,14 +221,14 @@ th {
 
 .wrapper {
   display: flex;
-  min-height: 100%;
   flex-direction: column;
   align-items: stretch;
+  max-width: var(--wrapper-width);
+  min-height: 100%;
   margin-right: auto;
   margin-left: auto;
   padding-right: calc(var(--spacing-unit) / 2);
   padding-left: calc(var(--spacing-unit) / 2);
-  max-width: var(--wrapper-width);
 }
 
 /* -- HEADER
@@ -236,16 +240,14 @@ th {
 }
 
 .site-title {
-  border-bottom: none;
   color: var(--color-emphasize-font);
   font-size: 2em;
   font-weight: bold;
   letter-spacing: 1px;
   text-transform: uppercase;
+  border-bottom: none;
 }
-.site-title:hover {
-  border-bottom: 2px solid var(--color-accent-light);
-}
+.site-title:hover { border-bottom: 2px solid var(--color-accent-light); }
 
 
 /* -- NAV
@@ -269,8 +271,8 @@ th {
 
 .site-nav a {
   display: block;
-  border-bottom: none;
   color: var(--color-secondary-font);
+  border-bottom: none;
 }
 .site-nav a:hover { color: var(--color-accent-light); }
 
@@ -290,8 +292,8 @@ th {
 }
 .list-posts li { display: block; }
 .list-posts a { 
-  border-bottom: none;
   color: var(--color-emphasize-font); 
+  border-bottom: none;
 }
 .list-posts a:hover { color: var(--color-accent); }
 
@@ -316,8 +318,8 @@ th {
   text-align: center;
 }
 .site-footer a {
-  border-bottom: none;
   color: var(--color-secondary-font);
   text-decoration: none;
+  border-bottom: none;
 }
 .site-footer a:hover { color: var(--color-accent-light); }
